migration-result/docs/ver/13.x/access-controls/idps/saml-guide.mdx
---
title: Using Teleport as a SAML identity provider
description: How to configure and use Teleport as a SAML identity provider.
h1: Teleport as a SAML identity provider
version: "13.x"
---

## How to use Teleport as an identity provider

This guide details an example on how to use Teleport as an identity provider to
authenticate to external services.

## Prerequisites

<Tabs>
  <Tab title="Teleport Team">
    - A Teleport Team account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin your free trial.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.4.16,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin your free trial.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      To download these tools, visit the [Downloads](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>
- If you're new to SAML, consider reviewing our [SAML Identity Provider
  Reference](/docs/ver/13.x/access-controls/idps/saml-reference) before proceeding.

## Example external application

We'll be using [samltest.id](https://samltest.id/) to create a test consumer of
Teleport's SAML identity provider.

## Step 1/4. Configure a Teleport role with access to SAML service provider objects

First, ensure you are logged into Teleport as a user that has permissions
to read and modify `saml_idp_service_provider` objects. The default `editor` role
has access to this already, but in case you are using a more customized configuration,
create a role called `sp-manager.yaml` with the following contents:

```yaml
kind: role
metadata:
  name: sp-manager
spec:
  allow:
    rules:
    - resources:
      - saml_idp_service_provider
      verbs:
      - list
      - create
      - read
      - update
      - delete
version: v6
```

Create the role with `tctl`:

```bash
$ tctl create sp-manager.yaml 
role 'saml-idp-service-provider-manager' has been created
```

Add the role to your user. Replace `teleport-admin` with your user name:

```bash
$ tctl users update --set-roles $(tctl get users/teleport-admin --format=json | \
jq -r '.[].spec.roles | join(",")'), sp-manager teleport-admin
User teleport-admin has been updated:
	New roles: auditor,editor,access,sp-manager
```

## Step 2/4. Configure samltest.id to recognize Teleport's identity provider

The first step in configuring the application for SSO is retrieving Teleport's
SAML identity provider metadata. You can obtain this metadata in XML format by
navigating to `https://<proxy-address>/enterprise/saml-idp/metadata`. Save
it in an easy to remember file name like `teleport-metadata.xml`.

Navigate to [https://samltest.id](https://samltest.id) and click on "Upload Metadata." Next, choose to upload
`teleport-metadata.xml`.

<img src="/assets/samltestid-0-successful-upload-94ab6ab462.png" alt="Successful upload" width="761" height="289" />

## Step 3/4. Obtain the service provider metadata and add it to Teleport

Download the service provider metadata from samltest.id as `saml-sp.xml`:

```bash
$ curl -o saml-sp.xml https://samltest.id/saml/sp
```

Using the template below, create a file called `saml-sp.yaml`. Assign the
metadata you just downloaded to the `entity_descriptor` field in the
`saml_idp_service_provider` object:

```yaml
kind: saml_idp_service_provider
metadata:
  # The friendly name of the service provider. This is used to manage the
  # service provider as well as in identity provider initiated SSO.
  name: samltest-id
spec:
  # The entity_descriptor is the service provider XML.
  entity_descriptor: |
    <md:EntityDescriptor xmlns:md="urn:oasis:names:tc:SAML:2.0:metadata"...
version: v1
```

Add this to Teleport using `tctl`:

```bash
$ tctl create saml-sp.yaml
# SAML IdP service provider 'samltest-id' has been created.
```

Teleport now trusts the samltest.id service provider.

## Step 4/4. Verify samltest.id login works

To verify everything works, navigate back to samltest.id's home page and select
"Test Your IdP." From there, enter the entity ID of Teleport's identity provider,
which is the same as the metadata URL: `https://<proxy-address>/enterprise/saml-idp/metadata`
and click "Go!"

<img src="/assets/samltestid-1-test-idp-1f7d208416.png" alt="Test the IdP" width="860" height="600" />

If you are not already logged into Teleport, you will be prompted to login. Once you
are logged in, you should be re-routed to a success page on samltest.id.

<img src="/assets/samltestid-2-successful-login-5ec65ec4e2.png" alt="Successful login" width="862" height="507" />

This has verified service provider initiated SSO. To verify identity provider initiated
SSO, navigate to `https://<proxy-address>/enterprise/saml-idp/login/samltest-id`,
where `samltest-id` is the friendly name of the service provider object created earlier.
You should be redirected to the same successful login page seen earlier.
